--- a/templates/employee/profile.html
+++ b/templates/employee/profile.html
@@ -1,13 +1,57 @@
 {% extends 'layout.html' %}
 
+
 {% block title %}
-    Profile Page
+    My Profile Page
         {% endblock %}
 
 {% block content %}
 
- <div class="jumbotron">
- <h1 class="text-center">Profile Page</h1>
- </div>
+  <!-- ======= Breadcrumbs ======= -->
+    <section id="breadcrumbs" class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>My Profile</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>My Profile</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- End Breadcrumbs -->
+
+    <!-- ======= Contact Section ======= -->
+
+    <section id="contact" class="contact">
+      <div class="container">
+
+        <div class="row justify-content-center" data-aos="fade-up">
+
+          <div class="col-lg-10">
+
+            <div class="info-wrap">
+              <div class="row">
+                <div class="col-lg-6 info">
+                  <h4>Name:</h4>
+                    <p>Login by- <b>{{ user.username }}</b></p>
+                </div>
+
+                <div class="col-lg-6 info mt-6 mt-lg-0">
+                  <p><a href="{% url 'logout' %}"> Logout:</a></p>
+                </div>
+
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+    </section><!-- End Contact Section -->
 
 {% endblock %}
