--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
 
         <nav class="nav-menu d-none d-lg-block">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
+                <li class="active"><a href="{% url 'home' %}">Home</a></li>
 
                 <li class="drop-down"><a href="">About</a>
                     <ul>
@@ -75,10 +75,18 @@
                 </li>
 
                 <li><a href="services.html">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="{% url 'contact' %}">Contact</a></li>
+
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'profile' %}">MY Profile</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">MY Account</a></li>
+
+                {% endif %}
+
 
             </ul>
         </nav><!-- .nav-menu -->
