--- a/templates/authentication/registration.html
+++ b/templates/authentication/registration.html
@@ -32,22 +32,32 @@
             <div class="row mt-5 justify-content-center" data-aos="fade-up">
                 <div class="col-lg-4">
                     <h2>Register Your Account</h2><br>
+
+                     {% for message in messages %}
+                        <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+
                     <form action="" method="post">
                         {% csrf_token %}
 
                         <div class="form-group">
-                            <input type="text" name="name" class="form-control" id="name"
+                            <input type="text" name="name" class="form-control"
                                    placeholder="Your Name"/>
                             <div class="validate"></div>
 
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" class="form-control" id="name" placeholder="Your Email"/>
+                            <input type="email" name="email" class="form-control"  placeholder="Your Email"/>
                             <div class="validate"></div>
                         </div>
 
                         <div class="form-group">
-                            <input type="password" name="password" class="form-control" id="name"
+                            <input type="password" name="password" class="form-control"
                                    placeholder="Your Password"/>
                             <div class="validate"></div>
 
