--- a/templates/employee/profile.html
+++ b/templates/employee/profile.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="col-lg-6 info mt-6 mt-lg-0">
-                  <p><a href="{% url 'logout' %}"> Logout:</a></p>
+                  <p><a href="{% url 'logout' %}"> Logout</a></p>
                 </div>
 
 
